# drl_mi_quadcopter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  raisimUnity
raisim/: CMakeLists.txt
raisim/acados_code/: Makefile  acados_sim_solver_quadrotor.c  acados_sim_solver_quadrotor.h  acados_sim_solver_quadrotor_q.c  acados_sim_solver_quadrotor_q.h  acados_solver_quadrotor.c  acados_solver_quadrotor.h  acados_solver_quadrotor_q.c  acados_solver_quadrotor_q.h  acados_solver_sfunction_quadrotor.c  acados_solver_sfunction_quadrotor_q.c  main_quadrotor.c  main_quadrotor_q.c  main_sim_quadrotor.c  main_sim_quadrotor_q.c  make_sfun_quadrotor.m  make_sfun_quadrotor_q.m
raisim/acados_code/quadrotor_model/: quadrotor_expl_ode_fun.c  quadrotor_expl_vde_adj.c  quadrotor_expl_vde_forw.c  quadrotor_model.h
raisim/acados_code/quadrotor_q_model/: quadrotor_q_expl_ode_fun.c  quadrotor_q_expl_vde_adj.c  quadrotor_q_expl_vde_forw.c  quadrotor_q_model.h
raisim/include/: benchmarkCommon.hpp  mpc_controller.hpp  mpc_q_controller.hpp  pidController.hpp  pid_controller.hpp  quadcopterInit.hpp  quadcopter_init.hpp  quadcopter_initializer.hpp  quanternion_to_euler.h  quaternionToEuler.hpp  spawn_quadcopter.hpp
raisim/src/: gyroscopic_effect.cpp  mpc_controller.cpp  mpc_q_controller.cpp  pid_control_quadcopter.cpp  pid_controller.cpp  quadcopter_mpc_control.cpp  quadcopter_mpc_q_control.cpp  quadcopter_pid_control.cpp  spawn_quadcopter.cpp
raisimGym/agents/: README.md
raisimGym/algorithms/imitation_learning/: __init__.py  dagger.py  dagger_storage.py
raisimGym/algorithms/pid_controller/: __init__.py  pid_controller.py
raisimGym/algorithms/reinforcement_learning/: ppo.py  ppo_storage.py
raisimGym/algorithms/shared_modules/: actor_critic.py
raisimGym/environments/itm_quadcopter/: dagger_runner.py  pid_cfg.yaml  pid_runner.py  ppo_cfg.yaml  ppo_runner.py  tester.py
raisimGym/environments/itm_quadcopter_dagger/: Environment.hpp  dagger_cfg.yaml  dagger_runner.py
raisimGym/environments/itm_quadcopter_pid/: Environment.hpp  pid_cfg.yaml  pid_runner.py
raisimGym/environments/itm_quadcopter_ppo/: Environment.hpp  ppo_cfg.yaml  ppo_runner.py
raisimGym/environments/itm_quadcopter_testenv/: Environment.hpp  nn_trajectory_single_target_neg_2800.csv  pid_trajectory_neg.csv  test_cfg.yaml  testenv_auto_nn .py  testenv_nn.py  testenv_pid.py  testenv_pid_automate.py
raisimGym/environments/itm_quadcopter_tester/: Environment.hpp  multiple_tester.py  tester.py
raisimGym/environments/stage_1_target_tracking/: Environment.hpp
raisimGym/environments/stage_1_testenv/: Environment.hpp
raisimGym/environments/stage_2_state_recovery/: Environment.hpp
raisimGym/environments/stage_2_testenv/: Environment.hpp
raisimGym/environments/testenv_random_state/: Environment.hpp
raisimGym/environments/testenv_side_hit/: Environment.hpp
raisimGym/environments/testenv_target_sequence/: Environment.hpp
raisimGym/helper/env_helper/: env_helper.py
raisimGym/scripts/: dagger_runner.sh  init.sh  pid_runner.sh  ppo_runner.sh
raisimGym/scripts/evaluation/: agent_trajectory_multi_scenarios.py  pid_task_duration_multi_tolerances.py  pid_trajectory_multi_scenarios.py  task_duration_multi_agents.py  task_duration_multi_tolerances.py  tester.py
raisimGym/scripts/examples/: agent_tester_side_hit.sh  agent_tester_stage_2.sh  pid_stage_1.sh  training_stage_1_dagger.sh  training_stage_2_ppo_retraining.sh
raisimGym/scripts/runner/: dagger_cfg.yaml  dagger_runner.py  pid_cfg.yaml  pid_runner.py  ppo_cfg.yaml  ppo_runner.py
raisimGymTorch/: setup.py
raisimGymTorch/algorithms/imitation/: DAgger.py  __init__.py  module.py  storage.py
raisimGymTorch/algorithms/imitation_learning/: DAgger.py  DAgger_storage.py  __init__.py  dagger.py  dagger_storage.py
raisimGymTorch/algorithms/modules/: actor_critic.py
raisimGymTorch/algorithms/pid_controller/: pid_controller.py
raisimGymTorch/algorithms/reinforcement_learning/: __init__.py  ppo.py  ppo_storage.py
raisimGymTorch/algorithms/shared_modules/: actor_critic.py
raisimGymTorch/environments/itm_quadcopter/: dagger_cfg.yaml  dagger_runner.py  pid_cfg.yaml  pid_runner.py  ppo_cfg.yaml  ppo_runner.py  tester.py
raisimGymTorch/environments/quadcopter_RL/: Environment.hpp  dagger_cfg.yaml  dagger_runner.py  ppo_runner.py  tester.py
raisimGymTorch/environments/quadcopter_imitation/: DAgger_runner.py  DAgger_tester.py  Environment.hpp  cfg.yaml
raisimGymTorch/environments/quadcopter_pid/: Environment.hpp  cfg.yaml  cfg_old.yaml  runner.py  (+1 more)
raisimGymTorch/rsg_quadcopter/: Env_old_rsg.hpp  Environment.hpp  runner.py
raisimGymTorch/scripts/: DAgger_runner.sh  compile.sh  dagger_runner.sh  debug.sh  init.sh  pid_runner.sh  ppo_runner.sh  run.sh  run_imitation.sh  run_ppo.sh
raisimPy/src/: launch_quadcopter.py  quadcopter_ITM.py  quadcopter_ITM_singlebody.py  quadcopter_hummingbird.py  quadcopter_hummingbird_singlebody.py  quadcopter_pid_control.py  spawn_quadcopter.py  spawn_quadcopter_box.py
scripts/c++/: spawn_quadcopter.cpp
scripts/python/: spawn_quadcopter.py
src/: spawnQuadcopter.cpp
(+1897 files in other folders)
